@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2021 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -208,7 +208,7 @@ public class SonatypeService {
 			List<String> failureMessages = Stream.of(activities).flatMap((activity) -> activity.events.stream())
 					.filter((event) -> event.severity > 0).flatMap((event) -> event.properties.stream())
 					.filter((property) -> "failureMessage".equals(property.name))
-					.map((property) -> "    " + property.value).collect(Collectors.toList());
+					.map((property) -> "    " + property.value).toList();
 			if (failureMessages.isEmpty()) {
 				logger.error("Close failed for unknown reasons");
 			}
