@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2022 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,8 +16,6 @@
 
 package org.springframework.boot.actuate.web.exchanges;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
 
@@ -59,7 +57,7 @@ public class InMemoryHttpExchangeRepository implements HttpExchangeRepository {
 	@Override
 	public List<HttpExchange> findAll() {
 		synchronized (this.httpExchanges) {
-			return Collections.unmodifiableList(new ArrayList<>(this.httpExchanges));
+			return List.copyOf(this.httpExchanges);
 		}
 	}
 
